// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lagu should list all projects 1`] = `
"╔══════════════════╤═══════════════════════════════════════════════════╤══════════╤═══════════════╤═════════════════════╗
║ Project          │ Git URL                                           │ Branches │ Pull Requests │ Created             ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-bitbucket     │ git@github.com:lagoon-end2end-ci/bitbucket.git    │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-drupal        │ git@github.com:lagoon-end2end-ci/drupal.git       │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-features      │ git@github.com:lagoon-end2end-ci/features.git     │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-github        │ git@github.com:lagoon-end2end-ci/github.git       │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-gitlab        │ git@github.com:lagoon-end2end-ci/gitlab.git       │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-multiproject1 │ git@github.com:lagoon-end2end-ci/multiproject.git │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-multiproject2 │ git@github.com:lagoon-end2end-ci/multiproject.git │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-nginx         │ git@github.com:lagoon-end2end-ci/nginx.git        │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-node          │ git@github.com:lagoon-end2end-ci/node.git         │ true     │ 0             │ 2018-02-03 21:15:24 ║
╟──────────────────┼───────────────────────────────────────────────────┼──────────┼───────────────┼─────────────────────╢
║ ci-rest          │ git@github.com:lagoon-end2end-ci/rest.git         │ true     │ 0             │ 2018-02-03 21:15:24 ║
╚══════════════════╧═══════════════════════════════════════════════════╧══════════╧═══════════════╧═════════════════════╝
"
`;

exports[`lagu should show customer details (project read from .lagoon.yml) 1`] = `
"Customer details for project 'ci-multiproject1':
╔════════════════════╤═════════════════════╗
║ Name               │ ci-customer         ║
╟────────────────────┼─────────────────────╢
║ Comment            │                     ║
╟────────────────────┼─────────────────────╢
║ Deploy Private Key │ √                   ║
╟────────────────────┼─────────────────────╢
║ SSH Keys           │ ci-customer-sshkey  ║
╟────────────────────┼─────────────────────╢
║ Created            │ 2018-06-08 15:20:52 ║
╚════════════════════╧═════════════════════╝
"
`;

exports[`lagu should show customer details (using --project option) 1`] = `
"Customer details for project 'ci-multiproject1':
╔════════════════════╤═════════════════════╗
║ Name               │ ci-customer         ║
╟────────────────────┼─────────────────────╢
║ Comment            │                     ║
╟────────────────────┼─────────────────────╢
║ Deploy Private Key │ √                   ║
╟────────────────────┼─────────────────────╢
║ SSH Keys           │ ci-customer-sshkey  ║
╟────────────────────┼─────────────────────╢
║ Created            │ 2018-02-03 21:15:24 ║
╚════════════════════╧═════════════════════╝
"
`;

exports[`lagu should show project details (read from .lagoon.yml) 1`] = `
"Project details for 'ci-multiproject1':
╔═══════════════════════╤══════════════════════════════════════════════════╗
║ Project Name          │ ci-multiproject1                                 ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Customer              │ ci-customer                                      ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Git URL               │ ssh://git@192.168.99.1:2222/git/multiproject.git ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Active Systems Deploy │ lagoon_openshiftBuildDeploy                      ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Active Systems Remove │ lagoon_openshiftRemove                           ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Branches              │ true                                             ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Pull Requests         │ true                                             ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Openshift             │ ci-local                                         ║
╟───────────────────────┼──────────────────────────────────────────────────╢
║ Created               │ 2018-06-08 15:20:52                              ║
╚═══════════════════════╧══════════════════════════════════════════════════╝
"
`;

exports[`lagu should show project details (using --project option) 1`] = `
"Project details for 'ci-multiproject1':
╔═══════════════════════╤═══════════════════════════════════════════════════╗
║ Project Name          │ ci-multiproject1                                  ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Customer              │ ci-customer                                       ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Git URL               │ git@github.com:lagoon-end2end-ci/multiproject.git ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Active Systems Deploy │ lagoon_openshiftBuildDeploy                       ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Active Systems Remove │ lagoon_openshiftRemove                            ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Branches              │ true                                              ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Pull Requests         │ 0                                                 ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Openshift             │ ci-ch.amazeeio.cloud                              ║
╟───────────────────────┼───────────────────────────────────────────────────╢
║ Created               │ 2018-02-03 21:15:24                               ║
╚═══════════════════════╧═══════════════════════════════════════════════════╝
"
`;
